force-app/main/default/objects/ReferralProduct__c/ReferralProduct__c.object-meta.xml
<CustomObject>
    <description>Object to store Referral product details</description>
    <label>Referral Product</label>
    <nameField>
        <label>Referral Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Referral Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>