force-app/main/default/objects/ReferralProduct__c/fields/CrossSellProduct__c.field-meta.xml
<CustomField>
    <fullName>CrossSellProduct__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>CrossSellProduct related to the product</description>
    <label>CrossSell Product</label>
    <referenceTo>FinancialProduct__c</referenceTo>
    <relationshipLabel>Referral Products</relationshipLabel>
    <relationshipName>ReferralProducts</relationshipName>
    <type>Lookup</type>
</CustomField>