force-app/main/default/objects/ReferralProduct__c/fields/ExternalCode__c.field-meta.xml
<CustomField>
    <fullName>ExternalCode__c</fullName>
    <description>To store product code from financial institute</description>
    <label>External Code</label>
    <length>40</length>
    <type>Text</type>
</CustomField>