force-app/main/default/objects/ReferralProduct__c/fields/ExternalId__c.field-meta.xml
<CustomField>
    <fullName>ExternalId__c</fullName>
    <description>External Id</description>
    <externalId>true</externalId>
    <label>External Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>