force-app/main/default/objects/ReferralProduct__c/fields/FinancialProduct__c.field-meta.xml
<CustomField>
    <fullName>FinancialProduct__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>FinancialProduct</description>
    <label>Financial Product</label>
    <referenceTo>FinancialProduct__c</referenceTo>
    <relationshipLabel>Financial Products</relationshipLabel>
    <relationshipName>FinancialProducts</relationshipName>
    <type>Lookup</type>
</CustomField>