force-app/main/default/objects/ReferralProduct__c/fields/IsSelected__c.field-meta.xml
<CustomField>
    <fullName>IsSelected__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if service is selected by customer</description>
    <label>IsSelected</label>
    <type>Checkbox</type>
</CustomField>