force-app/main/default/objects/ReferralProduct__c/fields/LongDescription__c.field-meta.xml
<CustomField>
    <fullName>LongDescription__c</fullName>
    <description>Product long description</description>
    <label>Long Description</label>
    <length>40</length>
    <type>Text</type>
</CustomField>