force-app/main/default/objects/ReferralProduct__c/fields/StartDate__c.field-meta.xml
<CustomField>
    <fullName>StartDate__c</fullName>
    <description>Product start date</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>