force-app/main/default/objects/ReferralProduct__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>FinancialProduct__c</columns>
    <columns>CrossSellProduct__c</columns>
    <columns>IsActive__c</columns>
    <columns>Order__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>